--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="C_form.css" />
+    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="demo.css" />
+    <style>
+      #map {
+        top: 70px;
+        left: 45px;
+        height: 90vh;
+        width: 97%;
+      }
+    </style>
+
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -131,47 +142,94 @@
   </head>
   <body>
     <div class="container-fluid">
-      <header class="bg-secondary">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Geopulse</a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
+      <header class="header justify-content-between" id="header">
+        <div><h5>GeoPulse</h5></div>
+        <div class="d-flex justify-content-between ms-auto" role="search">
+          <div class="input-group">
+            <select
+              class="form-select ms-auto"
+              aria-label="Select search category"
+              id="search_type"
+              style="width: 90px; border-radius: 10px"
             >
-              <span class="navbar-toggler-icon"></span>
+              <option value="">Select Type</option>
+              <option value="zone">Zone</option>
+              <option value="ward">Ward</option>
+              <option value="village">Village</option>
+              <option value="departme_1">Department</option>
+              <option value="work_type">Work Type</option>
+              <option value="stage">Stage</option>
+            </select>
+            <input
+              class="form-control ms-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+              id="searchInputDashboard"
+              style="height: 40px; width: 200px; border-radius: 10px"
+            />
+            <div
+              id="autocompleteSuggestions"
+              class="autocomplete-suggestions"
+            ></div>
+            <button
+              class="btn btn-outline-danger"
+              type="submit"
+              style="width: 50px; border-radius: 10px"
+            >
+              <i class="fa-solid fa-trash"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
-              <form class="d-flex" role="search">
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                  id="searchInput"
-                />
-                <div
-                  id="autocompleteSuggestions"
-                  class="autocomplete-suggestions"
-                ></div>
+          </div>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          <div class="header_img">
+            <img src="https://i.imgur.com/hczKIze.jpg" alt />
+          </div>
+        </div>
+      </header>
+      <div class="l-navbar" id="nav-bar">
+        <nav class="nav">
+          <div>
+            <a href="#" class="nav_logo"> </a>
 
-                <button class="btn btn-outline-success" type="submit">
-                  Search
-                </button>
-              </form>
-              <button id="showTableBtn" class="btn btn-outline-secondary ms-2">
-                <i class="fa fa-map"></i>
-              </button>
+            <div class="nav_list">
+              <div class="nav_link active">
+                <i class="fas fa-filter nav_icon" onclick="openNav()"></i>
+              </div>
+
+              <!-- <div class="closebtn" onclick="closeNav()">&times; -->
+
+              <!-- </div> -->
+              <div class="nav_link" title="Download Report">
+                <i
+                  class="fa-solid fa-file-arrow-down nav_icon"
+                  id="generatePdfBtn"
+                  onclick="takeScreenshot()"
+                >
+                </i>
+              </div>
+
+              <div class="nav_link" title="Show Table">
+                <i
+                  class="fa-solid fa-file-arrow-down nav_icon"
+                  id="showTableBtn"
+                >
+                </i>
+              </div>
+
+              <!-- <a  href="#" class="nav_link"> 
+                              <i class='bx bx-bookmark nav_icon'></i> 
+                          </a>  -->
+
+              <a href="#" class="nav_link">
+                <i class="bx bx-bar-chart-alt-2 nav_icon"></i>
+              </a>
             </div>
           </div>
+          <a href="#" class="nav_link">
+            <i class="bx bx-log-out nav_icon"></i>
+          </a>
         </nav>
-      </header>
+      </div>
       <main>
         <div id="map"></div>
       </main>
@@ -210,5 +268,52 @@
       </div>
     </div>
     <script src="index.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#searchInputDashboard").autocomplete({
+          minLength: 3,
+          source: function (request, response) {
+            let searchTerm = request.term;
+            let searchType = $("#search_type").val();
+
+            if (searchTerm.length >= 3 && searchType) {
+              let cqlFilter = `${searchType} ILIKE '%${searchTerm}%'`;
+
+              let geoServerURL = `https://geo.geopulsea.com/geoserver/pmc/wfs?service=WFS&version=1.1.0&request=GetFeature&typeName=IWMS_point&outputFormat=application/json&CQL_FILTER=${encodeURIComponent(
+                cqlFilter
+              )}`;
+
+              $.getJSON(geoServerURL, function (data) {
+                let suggestions = data.features.map(
+                  (feature) => feature.properties[searchType]
+                );
+
+                suggestions = suggestions.filter(
+                  (value, index, self) => self.indexOf(value) === index
+                );
+
+                suggestions = suggestions.slice(0, 10);
+                response(suggestions);
+              });
+            } else {
+              response([]);
+            }
+          },
+          select: function (event, ui) {
+            $("#searchInputDashboard").val(ui.item.label);
+
+            let searchType = $("#search_type").val();
+            let cqlFilterSelected = `${searchType} = '${ui.item.label}'`;
+            fitbou(cqlFilterSelected);
+            wms_layer15.setParams({
+              CQL_FILTER: cqlFilterSelected,
+              styles: "pointhighlight",
+            });
+
+            return false;
+          },
+        });
+      });
+    </script>
   </body>
 </html>
