--- a/geometry_page.html
+++ b/geometry_page.html
@@ -197,16 +197,22 @@
               style="text-decoration: none"
               >DRAW MANUALLY</a
             >
+            <a
+              href="edit-feature.html"
+              class="toggle-btn fw-bold"
+              style="text-decoration: none"
+              >EDIT FEATURE</a
+            >
 
             <!-- <label for="fileInput" class="toggle-btn1 btn btn-outline-secondary"> -->
-            <input
+            <!-- <input
               class="toggle-btn1 btn btn-outline-secondary"
               type="file"
               id="fileInput"
               accept=".kml, .kmz"
               onchange="loadFile()"
               title="Upload KML"
-            />
+            /> -->
             <!-- </label> -->
           </div>
         </form>
