--- a/dashboard_update.html
+++ b/dashboard_update.html
@@ -141,7 +141,7 @@
   </head>
   <body>
     <div class="container-fluid">
-        <header class="bg-secondary">
+      <header class="bg-secondary">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">Geopulse</a>
@@ -181,55 +181,54 @@
             </div>
           </div>
         </nav>
-        </header>
-        <!-- header end -->
-       <div class="row">
-        <aside class="col-md-1 text-light" style="background-color: #163140;">
-            <div class="p-3 pt-5">
-                <i class="fa-solid fa-map  fs-6"></i>   Filter
-            </div>
-            <div class="px-3">
-                <i class="fa-solid fa-file-lines"></i>  Report
-            </div>
+      </header>
+      <!-- header end -->
+      <div class="row">
+        <aside class="col-md-1 text-light" style="background-color: #163140">
+          <div class="p-3 pt-5">
+            <i class="fa-solid fa-map fs-6"></i> Filter
+          </div>
+          <div class="px-3"><i class="fa-solid fa-file-lines"></i> Report</div>
         </aside>
         <main class="col-md-11">
-            <div id="map"></div>
-            <div id="table-container">
+          <div id="map"></div>
+          <div id="table-container">
             <button id="closeTableBtn" class="close-button">
-                <i class="fas fa-times"></i>
+              <i class="fas fa-times"></i>
             </button>
 
             <table
-                id="workTable"
-                class="table table-bordered table-hover"
-                style="width: 100% !important">
-                <thead>
+              id="workTable"
+              class="table table-bordered table-hover"
+              style="width: 100% !important"
+            >
+              <thead>
                 <tr>
-                    <th>Name of Work</th>
-                    <th>Work Type</th>
-                    <th>Work Completion Date</th>
-                    <th>Zone</th>
-                    <th>Ward</th>
-                    <th>Prabhag</th>
+                  <th>Name of Work</th>
+                  <th>Work Type</th>
+                  <th>Work Completion Date</th>
+                  <th>Zone</th>
+                  <th>Ward</th>
+                  <th>Prabhag</th>
                 </tr>
-                </thead>
-                <tfoot>
+              </thead>
+              <tfoot>
                 <tr>
-                    <th>Name of Work</th>
-                    <th>Work Type</th>
-                    <th>Work Completion Date</th>
-                    <th>Zone</th>
-                    <th>Ward</th>
-                    <th>Prabhag</th>
+                  <th>Name of Work</th>
+                  <th>Work Type</th>
+                  <th>Work Completion Date</th>
+                  <th>Zone</th>
+                  <th>Ward</th>
+                  <th>Prabhag</th>
                 </tr>
-                </tfoot>
-                <tbody></tbody>
+              </tfoot>
+              <tbody></tbody>
             </table>
-            </div>
-            <!-- table-container end -->
+          </div>
+          <!-- table-container end -->
         </main>
         <!-- main end -->
-        </div>
+      </div>
     </div>
     <!-- container end -->
     <script src="index.js"></script>
