--- a/index.html
+++ b/index.html
@@ -260,6 +260,16 @@
     <script src="index-page.js"></script>
     <script>
       $(document).ready(function () {
+        var wardname = localStorage.getItem("wardname");
+        if (wardname) {
+          var cql_filterm = `Ward_Name='${wardname}'`;
+          fitbou(cql_filterm);
+          ward_names.setParams({
+            cql_filter: cql_filterm,
+            styles: "highlight",
+          });
+          ward_names.addTo(map).bringToFront();
+        }
         $("#searchInputDashboard").autocomplete({
           minLength: 3,
           source: function (request, response) {
