--- a/geometry_page.html
+++ b/geometry_page.html
@@ -369,7 +369,7 @@
               feature.geometry.type === "LineString" ||
               feature.geometry.type === "MultiLineString"
             ) {
-              console.log(feature.geometry.coordinates);
+              // console.log(feature.geometry.coordinates);
               let coordinates = feature.geometry.coordinates.map(
                 (innerArray) => {
                   if (Array.isArray(innerArray[0])) {
