--- a/index.html
+++ b/index.html
@@ -257,6 +257,59 @@
         </table>
       </div>
     </div>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="roadLengthModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="roadLengthModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="roadLengthModalLabel">
+              Change Road Length
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="roadLengthForm">
+              <div class="form-group">
+                <label for="newRoadLengthInput">New Road Length (km):</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="newRoadLengthInput"
+                  placeholder="Enter new road length"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="submit" form="roadLengthForm" class="btn btn-primary">
+              Save changes
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="index-page.js"></script>
     <script>
       $(document).ready(function () {
