--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -466,7 +466,7 @@
           <label for="Width">Width</label>
           <input type="text" id="Width" name="Width" placeholder="Width in m" required />
           <label for="Length">Length</label>
-          <input type="text" id="Length" name="Length" placeholder="Width in km & m" required />
+          <input type="text" id="Length" name="Length" placeholder="Width in km" required />
           <a class="submitbtn" >
             <button type="button" onclick="submitForm()">Next</button>
           </a>
