--- a/dashboard.html
+++ b/dashboard.html
@@ -511,7 +511,7 @@
                 <button id="closeTableBtnDashboard" class="close-button">
                   <i class="fa-solid fa-minimize" style="font-weight: bold; margin-top: -10%; "></i>
                 </button>
-                <table id="workTableDashboard" class="table table-bordered table-hover">
+                <table id="workTableDashboard" class="table table-bordered table-hover" style="height:100px; overflow-y: scroll;">
                     <thead>
                         <tr>
                             <th>Zone</th>
